src/compiler/tests/snapshots/test_output__Compiler vm code example: snake__List.jack@List.jack.snap
---
source: src/compiler/tests/test_output.rs
expression: vm_code
input_file: examples/snake/List.jack

---
function List.new 0
push constant 2
call Memory.alloc 1
pop pointer 0
push argument 0
pop this 0
push argument 1
pop this 1
push pointer 0
return
function List.getData 0
push argument 0
pop pointer 0
push this 0
return
function List.setData 0
push argument 0
pop pointer 0
push argument 1
pop this 0
push constant 0
return
function List.getNext 0
push argument 0
pop pointer 0
push this 1
return
function List.setNext 0
push argument 0
pop pointer 0
push argument 1
pop this 1
push constant 0
return
function List.print 1
push argument 0
pop pointer 0
push pointer 0
pop local 0
label __VM_LABEL_1
push local 0
push constant 0
eq
not
not
if-goto __VM_LABEL_2
push local 0
call List.getData 1
call Output.printInt 1
pop temp 0
push constant 32
call Output.printChar 1
pop temp 0
push local 0
call List.getNext 1
pop local 0
goto __VM_LABEL_1
label __VM_LABEL_2
push constant 0
return
function List.dispose 0
push argument 0
pop pointer 0
push this 1
push constant 0
eq
not
not
if-goto __VM_LABEL_3
push this 1
call List.dispose 1
pop temp 0
goto __VM_LABEL_3
label __VM_LABEL_3
push pointer 0
call Memory.deAlloc 1
pop temp 0
push constant 0
return
function List.append 0
push argument 0
pop pointer 0
push argument 1
push pointer 0
call List.new 2
return
function List.popLast 4
push argument 0
pop pointer 0
push pointer 0
pop local 0
push local 0
push constant 0
eq
push local 0
call List.getNext 1
push constant 0
eq
or
not
if-goto __VM_LABEL_4
push constant 0
return
goto __VM_LABEL_4
label __VM_LABEL_4
push local 0
pop local 1
push local 1
call List.getNext 1
pop local 2
label __VM_LABEL_5
push local 2
call List.getNext 1
push constant 0
eq
not
not
if-goto __VM_LABEL_6
push local 1
call List.getNext 1
pop local 1
push local 1
call List.getNext 1
pop local 2
goto __VM_LABEL_5
label __VM_LABEL_6
push local 2
call List.getData 1
pop local 3
push local 1
push constant 0
call List.setNext 2
pop temp 0
push local 2
call List.dispose 1
pop temp 0
push local 3
return
function List.extendLast 1
push argument 0
pop pointer 0
push pointer 0
pop local 0
label __VM_LABEL_7
push local 0
call List.getNext 1
push constant 0
eq
not
not
if-goto __VM_LABEL_8
push local 0
call List.getNext 1
pop local 0
goto __VM_LABEL_7
label __VM_LABEL_8
push local 0
push argument 1
push constant 0
call List.new 2
call List.setNext 2
pop temp 0
push constant 0
return
function List.cycleLastToHead 1
push argument 0
pop pointer 0
push pointer 0
call List.popLast 1
pop local 0
push local 0
push pointer 0
call List.new 2
return

