src/compiler/tests/snapshots/test_output__Compiler vm code example: snake__Main.jack@Main.jack.snap
---
source: src/compiler/tests/test_output.rs
expression: vm_code
input_file: examples/snake/Main.jack

---
function Main.main 1
call Game.new 0
pop local 0
push local 0
call Game.start 1
pop temp 0
push local 0
call Game.dispose 1
pop temp 0
push constant 0
return

