src/compiler/tests/snapshots/test_output__Compiler vm code example: snake__Utils.jack@Utils.jack.snap
---
source: src/compiler/tests/test_output.rs
expression: vm_code
input_file: examples/snake/Utils.jack

---
function Utils.modulo 1
push argument 0
push argument 0
push argument 1
call Math.divide 2
push argument 1
call Math.multiply 2
sub
pop local 0
push local 0
push constant 0
lt
not
if-goto __VM_LABEL_1
push local 0
push argument 1
add
pop local 0
label __VM_LABEL_1
push local 0
return

